Fix #main padding on small screens

--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -3155,7 +3155,7 @@ input, select, textarea {
 		background-color: white;
 	}
 
-	@media screen and (max-width: 736px) {
+	@media screen and (max-width: 1285px) {
 
 		#main {
 			padding: 0em 0 22em 0 ;
